# TEK2day-Finance

./: .gitignore  BUILD_LIST.md  DATA_ARCHITECTURE.md  Dockerfile  Dockerfile.api  Dockerfile.daily-prices  Dockerfile.onboard  Dockerfile.quarterly-financials  Dockerfile.weekly-estimates  README.md  app.py  cli.py  cloudbuild.api.yaml  cloudbuild.daily-prices.yaml  cloudbuild.quarterly-financials.yaml  cloudbuild.weekly-estimates.yaml  config.py  fetchers.py  onboard.py  pull_annual.py  pull_daily_prices.py  pull_full_data.py  pull_market_caps.py  pull_quarterly_financials.py  pull_sp500.py  pull_weekly_estimates.py  pyproject.toml  requirements.txt  storage.py  terminal.py  universe.py
static/: index.html
