[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tek2day-finance"
version = "0.1.0"
description = "Open-source stock data terminal — prices, fundamentals, estimates, and financials"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.31",
    "google-cloud-firestore>=2.16.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "plotext>=5.2.0",
]

[project.scripts]
tek2day = "terminal:main"
